# novalclaw

./: .gitignore  config.template.toml
apps/omninova-tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/omninova-tauri/src-tauri/src/: composer_attachments.rs  desktop_capture.rs  lib.rs
novalclaw-main/: .gitignore  CHANGES.md  Cargo.toml  README.md  README_zh.md  SHA256SUMS.txt
novalclaw-main/.github/: omninova-tauri-secrets.example.md
novalclaw-main/.trae/skills/ppt-generator/: SKILL.md
novalclaw-main/apps/omninova-android/: README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
novalclaw-main/apps/omninova-android/app/: build.gradle.kts  proguard-rules.pro
novalclaw-main/apps/omninova-android/scripts/: build-android.sh
novalclaw-main/apps/omninova-ios/: README.md  project.yml
novalclaw-main/apps/omninova-ios/CallDirectoryExtension/: CallDirectoryHandler.swift  Info.plist
novalclaw-main/apps/omninova-ios/OmniNovaPhoneAgent/: ContentView.swift  Info.plist  OmniNovaPhoneAgent.entitlements
novalclaw-main/apps/omninova-ios/OmniNovaPhoneAgent/Models/: ConversationModels.swift
novalclaw-main/apps/omninova-ios/OmniNovaPhoneAgent/Services/: AgentGatewayClient.swift  KeyInfoExtractor.swift  SpamDetector.swift  SpeechPipeline.swift
novalclaw-main/apps/omninova-ios/scripts/: build-ios.sh
novalclaw-main/apps/omninova-tauri/: index.html  package-lock.json  package.json
novalclaw-main/apps/omninova-tauri/scripts/: build-all-desktop.mjs  build-platform.mjs  check-build-env.mjs  codesign-macos-fallback.sh  configure-android-signing.mjs  platforms.mjs  postinstall-deps.mjs  setup-apple-signing.sh  stage-release-assets.mjs
novalclaw-main/apps/omninova-tauri/src/: App.tsx  index.css
novalclaw-main/apps/omninova-tauri/src-tauri/: Info.plist  build.rs
novalclaw-main/apps/omninova-tauri/src-tauri/capabilities/: default.json
novalclaw-main/apps/omninova-tauri/src-tauri/icons/: icon.icns
novalclaw-main/apps/omninova-tauri/src-tauri/src/: cli_install.rs  lib.rs  main.rs
novalclaw-main/apps/omninova-tauri/src/components/: AppShell.tsx
novalclaw-main/apps/omninova-tauri/src/utils/: chatStorage.ts  tauri.ts
novalclaw-main/apps/omninova-ui/: package-lock.json
novalclaw-main/crates/omninova-core/: Cargo.toml
novalclaw-main/crates/omninova-core/src/: lib.rs
novalclaw-main/crates/omninova-core/src/acp/: client.rs  mcp_adapter.rs  mod.rs  server.rs  types.rs
novalclaw-main/crates/omninova-core/src/agent/: prompt.rs
novalclaw-main/crates/omninova-core/src/channels/: mod.rs
novalclaw-main/crates/omninova-core/src/cli/: mod.rs
novalclaw-main/crates/omninova-core/src/config/: env.rs  loader.rs  schema.rs  traits.rs  validation.rs
novalclaw-main/crates/omninova-core/src/cron/: mod.rs  scheduler.rs  store.rs
novalclaw-main/crates/omninova-core/src/daemon/: launchd.rs  mod.rs  schtasks.rs  service.rs  systemd.rs
novalclaw-main/docs/: SIGNING_CN.md  TRENDRADAR_INTEGRATION.md  macOS-安装与修复.txt
novalclaw-main/docs/grafana/: README.md  omninova-dashboard.json
novalclaw-main/docs/investor/: OmniNova_Claw_Investor_Pitch_CN.pptx  generate_pitch_ppt.py  investor_qa_cn.md  omninova_claw_bp_cn.md  presenter_notes_cn.md
novalclaw-main/skills/financial-analysis/: SKILL.md
novalclaw-main/skills/financial-valuation/: SKILL.md
novalclaw-main/skills/penetration-assessment/: SKILL.md  report_template.md  workflow_phases.json
novalclaw-main/skills/phone-call-assistant/: SKILL.md  call_handling_guide.md  conversation_log_schema.json  key_info_extraction_schema.json  spam_detection_rules.json
novalclaw-main/skills/quantitative-backtest/: SKILL.md
novalclaw-main/skills/quantitative-research/: SKILL.md
novalclaw-main/skills/trendradar-news/: SKILL.md  bridge-config.toml  bridge.py
(+134 files in other folders)
