[package]
name = "omninova-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "omninova_tauri_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.1"
base64 = "0.22"
image.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
omninova-core = { path = "../../../crates/omninova-core" }
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
