[package]
name = "omninova-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
reqwest.workspace = true
uuid.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
config.workspace = true
toml.workspace = true
directories.workspace = true
urlencoding.workspace = true
base64.workspace = true
image.workspace = true
prometheus.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "macros"] }
time-core.workspace = true
time-macros.workspace = true
deranged.workspace = true
num-conv.workspace = true
indexmap.workspace = true
pest.workspace = true
serde_with.workspace = true
proc-macro-crate.workspace = true
toml_edit.workspace = true
pest_derive.workspace = true
pest_generator.workspace = true
pest_meta.workspace = true
serde_with_macros.workspace = true
home.workspace = true
avif-serialize.workspace = true
base64ct.workspace = true
globset.workspace = true
url.workspace = true
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
pdf-extract = "0.10.0"
serde_yaml = "0.9.34"
qrcode.workspace = true
